--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,34 @@
-name: CI
+name: CI Pipeline
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main, dev]
+  pull_request:
+    branches: [main, dev]
 
 jobs:
-  test:
+  test-and-build:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
 
-    - name: Setup Python
+    - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
         python-version: 3.10
 
-    - name: Install dependencies
+    - name: Install system dependencies
+      run: sudo apt-get install -y gdal-bin libgdal-dev
+
+    - name: Install Python dependencies
       run: |
         pip install -r api/requirements.txt
-    
-    - name: Run Tests
+        pip install pytest pytest-asyncio httpx fastapi
+
+    - name: Run API tests
+      run: pytest api/tests/
+
+    - name: Build Docker image
       run: |
-        pytest api/tests/
+        docker build -f docker/Dockerfile -t geo-embeddings-api:latest .
