--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,7 +2,8 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 duckdb==0.9.2
-sentence-transformers==2.2.2
+sentence-transformers==2.2.1
+huggingface-hub==0.10.1
 h3==3.7.6
 numpy==1.24.3
 python-multipart==0.0.6
