Fix unbound install_error and pre-install DuckDB spatial extension in Docker
- Fix UnboundLocalError in duckdb_manager.py by initializing install_error variable
- Add DuckDB extension pre-installation in Dockerfile to avoid runtime network issues on ARM64
- Install spatial and json extensions during Docker build instead of at runtime

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,6 +7,25 @@ WORKDIR /app
 COPY api/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Pre-install DuckDB extensions to avoid runtime network issues
+# This is especially important for ARM64 containers that may have network connectivity issues
+RUN python -c "\
+import duckdb; \
+conn = duckdb.connect(':memory:'); \
+try: \
+    conn.execute('INSTALL spatial'); \
+    conn.execute('LOAD spatial'); \
+    print('Successfully pre-installed spatial extension'); \
+except Exception as e: \
+    print(f'Warning: Could not pre-install spatial extension: {e}'); \
+try: \
+    conn.execute('INSTALL json'); \
+    conn.execute('LOAD json'); \
+    print('Successfully pre-installed json extension'); \
+except Exception as e: \
+    print(f'Warning: Could not pre-install json extension: {e}'); \
+conn.close()"
+
 COPY api/ ./api/
 COPY data/ ./data/
 COPY scripts/ ./scripts/
