--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,22 +9,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Pre-install DuckDB extensions to avoid runtime network issues
 # This is especially important for ARM64 containers that may have network connectivity issues
-RUN python -c "\
-import duckdb; \
-conn = duckdb.connect(':memory:'); \
-try: \
-    conn.execute('INSTALL spatial'); \
-    conn.execute('LOAD spatial'); \
-    print('Successfully pre-installed spatial extension'); \
-except Exception as e: \
-    print(f'Warning: Could not pre-install spatial extension: {e}'); \
-try: \
-    conn.execute('INSTALL json'); \
-    conn.execute('LOAD json'); \
-    print('Successfully pre-installed json extension'); \
-except Exception as e: \
-    print(f'Warning: Could not pre-install json extension: {e}'); \
-conn.close()"
+COPY docker/install_duckdb_extensions.py .
+RUN python install_duckdb_extensions.py
 
 COPY api/ ./api/
 COPY data/ ./data/
